plugins {
    id 'java'
    id 'eclipse'
    id 'org.springframework.boot' version '3.4.1' // Spring Boot 3.4.1 
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'aicc'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	// Log4j2 사용 시 아래 exclude 활성화
	// all {
	// 	exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
	// 	exclude group: 'ch.qos.logback', module: 'logback-classic'
	// 	exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	// }
}


repositories {
    mavenCentral()
}

dependencies {

	// B:기본설정
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux' 

    // Redis 전용 의존성 (REDIS_ONLY 모드)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    
    // PostgreSQL & MyBatis 의존성
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
    implementation 'org.postgresql:postgresql:42.7.1'
    
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'org.projectlombok:lombok'
  
    implementation 'io.netty:netty-all:4.1.100.Final'
    implementation 'io.projectreactor.netty:reactor-netty-http'


    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}


// 한글 인코딩 설정
// -parameters
tasks.withType(JavaCompile) {
	options.compilerArgs << "-parameters"
	options.encoding = 'UTF-8'
} 

bootRun {
    systemProperty "file.encoding", "UTF-8"
}
eclipse {
    jdt {
        file {
            withProperties { properties ->
                properties['org.eclipse.jdt.core.compiler.codegen.methodParameters'] = 'generate'
            }
        }
    }
}

tasks.withType(Test) {
    useJUnitPlatform()
}
